<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11129.15" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11103.10"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SortingChar" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wh7-yW-nLI">
                                <accessibility key="accessibilityConfiguration" identifier="sortButton"/>
                                <inset key="contentEdgeInsets" minX="30" minY="0.0" maxX="30" maxY="0.0"/>
                                <state key="normal" title="Sort"/>
                                <connections>
                                    <action selector="sort:" destination="BYZ-38-t0r" eventType="touchUpInside" id="meR-Ci-QMn"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Result" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1gM-KP-Rha">
                                <accessibility key="accessibilityConfiguration" identifier="sortedLabel"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="1" id="0qe-cz-e85"/>
                                    <constraint firstAttribute="height" constant="21" id="lir-Qw-hGp"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lq0-yK-VnD">
                                <accessibility key="accessibilityConfiguration" identifier="inputField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstAttribute="trailingMargin" secondItem="lq0-yK-VnD" secondAttribute="trailing" constant="30" id="5r6-85-sCb"/>
                            <constraint firstItem="lq0-yK-VnD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="7sp-qG-uAg"/>
                            <constraint firstItem="lq0-yK-VnD" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="50" id="9iB-Xa-2qJ"/>
                            <constraint firstItem="1gM-KP-Rha" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RFN-s5-gfi"/>
                            <constraint firstItem="Wh7-yW-nLI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dO5-xi-cHU"/>
                            <constraint firstItem="1gM-KP-Rha" firstAttribute="top" secondItem="Wh7-yW-nLI" secondAttribute="bottom" constant="30" id="i59-c4-sM0"/>
                            <constraint firstItem="Wh7-yW-nLI" firstAttribute="top" secondItem="lq0-yK-VnD" secondAttribute="bottom" constant="25" id="kgR-w0-afB"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="inputField" destination="lq0-yK-VnD" id="dY7-cL-4tf"/>
                        <outlet property="resultLabel" destination="1gM-KP-Rha" id="76C-7x-zCt"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="21.600000000000001" y="36.431784107946029"/>
        </scene>
    </scenes>
</document>
